--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "luxon": "^1.24.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "shards-react": "^1.0.3"
+    "shards-react": "^1.0.3",
+    "subscriptions-transport-ws": "^0.9.18"
   }
 }
